bit style on reset passwords

--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,6 +1,12 @@
-Can't you remember your password?
+<h1>Can't you remember your password?</h1>
+<p> Reset it </p>
 
 <% form_tag url_for(:action => 'forgot_password') do %>
-  e-mail: <%= text_field_tag :email, "", :size => 50 %>
-  <%= submit_tag 'Get a new password' %>
+  <p>
+    <%= label_tag :email %><br />
+    <%= text_field_tag :email, "", :size => 50 %>
+  </p>
+  <p>
+    <%= submit_tag 'Get a new password' %>
+  </p>
 <% end %>
