--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -10,6 +10,9 @@
   </p>
 <% end %>
 
+<h3>Photo</h3>
+<%= render :partial => 'photo_edit', :locals => { :paper => @paper } %>
+
 <h3>Speakers</h3>
 <div id="speakers">
   <%= render :partial => 'speakers_edit', :locals => { :paper => @paper } %>
