--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,13 +1,15 @@
 <h2>Calendar</h2>
 
 <% @dates.each do |date| %>
-  <h3><%= date.to_s %></h3>
+  <h3><%= date.strftime("%A %d %B %Y")  %></h3>
   <% @rooms.each do |room| %>
-    <h4><%= room.name %></h4>
-    <% @papers.select{ |p| p.on_date_and_room_id?( date, room.id ) }.each do |paper| %>
-      <h5><%= link_to paper.title, paper %></h5>
-      <p>Date: <%= paper.date %></p>
-      <p>Room: <%= paper.room.name %></p>
+    <% papers_on_room = @papers.select{ |p| p.on_date_and_room_id?( date, room.id ) } %>
+    <% if !papers_on_room.empty? %>
+      <h4>on room '<%= room.name %>'</h4>
+      <% papers_on_room.each do |paper| %>
+        <h5>at <%= paper.date.strftime("%H:%M %p") %>, <%= link_to paper.title, paper %></h5>
+        <%= image_tag paper.photo.url(:medium) %>
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
