--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -11,6 +11,8 @@
 <% end %>
 
 <h3>Photo</h3>
+<p>File types allowed: 'image/jpeg', 'image/png'. Max file size: 1MB. Width: between 576px and 1000px.
+  Height: between 150px and 300px.</p>
 <%= render :partial => 'photo_edit', :locals => { :paper => @paper } %>
 
 <h3>Speakers</h3>
