--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,6 +38,7 @@
 
 
 
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<% if logged_in? && (admin? || @user == current_user) %>
+  <%= link_to 'Edit', edit_user_path(@user) %> |
+<% end %>
 <%= link_to 'Back', users_path %>
