--- a/app/views/user_mailer/signup_notification.erb
+++ b/app/views/user_mailer/signup_notification.erb
@@ -1,7 +1,8 @@
+Welcome to EuRuKo 2009 registration page.
+
 Your account has been created.
 
   Username: <%=h @user.login %>
-  Password: <%=h @user.password %>
 
 Visit this url to activate your account:
 
