--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,17 +27,19 @@
   <p><%= f.check_box :public_profile %>
   <%= f.label 'public_profile', 'Public Profile' %></p>
   
-  <p><%= check_box_tag :change_password %>
+  <p><%= f.check_box :change_password, :onchange => "toggle_change_password_fields()" %>
   <%= f.label 'change_password', 'Change Password' %></p>
   
-  <p><%= f.label :password_actual, "Actual Password" %><br />
-  <%= f.text_field :password_actual %></p>
+  <div id="change_password_fields" style="display:<%= @user.change_password ? "inline" : "none" %>">
+    <p><%= f.label :password_actual, "Actual Password" %><br />
+    <%= f.password_field :password_actual %></p>
   
-  <p><%= f.label :password, "New Password" %><br/>
-  <%= f.password_field :password %></p>
+    <p><%= f.label :password, "New Password" %><br/>
+    <%= f.password_field :password %></p>
 
-  <p><%= f.label :password_confirmation, 'Confirm New Password' %><br/>
-  <%= f.password_field :password_confirmation %></p>
+    <p><%= f.label :password_confirmation, 'Confirm New Password' %><br/>
+    <%= f.password_field :password_confirmation %></p>
+  </div>
   
   <% if admin? %>
     <p><%= f.label :role, "Role" %><br />
@@ -51,3 +53,13 @@
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+
+<script>
+  function toggle_change_password_fields(){
+    if( $('#user_change_password').is(":checked") ){
+      $('#change_password_fields').show("fast");
+    }else{
+      $('#change_password_fields').hide("fast");
+    }
+  }
+</script>
