--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -1,9 +1,11 @@
 <%= error_message_on @user, :password, :prepend_text => 'Invalid password: ' %>
-
-Reset your password:
+<h1>Reset your password:</h1>
 
 <% form_tag reset_password_path(:id => params[:id]) do %>
-    New password: <%= password_field_tag :password %>
-    Confirm new password: <%= password_field_tag :password_confirmation %>
-    <%= submit_tag "Save new password" %>
+  <p><%= label_tag 'password', 'New password' %><br/>
+  <%= password_field_tag 'password', nil %></p>
+  <p><%= label_tag 'password', 'Confirm new password' %><br/>
+  <%= password_field_tag 'password_confirmation', nil %></p>
+
+  <p><%= submit_tag "Save new password" %></p>
 <% end %>
