--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New event</h1>
+<% title 'New Event' %>
 
 <% form_for(@event) do |f| %>
   <%= render :partial => 'form', :locals => { :f => f } %>
