--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,5 @@
+<% title "Event: #{@event.name}" %>
+
 <h2><%= @event.name %> (<%= @event.price_euros %>€)</h2>
 <%= simple_format( @event.description ) %>
 
