--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,5 +1,6 @@
-<h1>Can't you remember your password?</h1>
-<p> Reset it </p>
+<% title "Reseting Password" %>
+
+<p>Can't you remember your password?, reset it!</p>
 
 <% form_tag url_for(:action => 'forgot_password') do %>
   <p>
