--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -1,5 +1,6 @@
+<% title "Reset your password" %>
+
 <%= error_message_on @user, :password, :prepend_text => 'Invalid password: ' %>
-<h1>Reset your password:</h1>
 
 <% form_tag reset_password_path(:id => params[:id]) do %>
   <p><%= label_tag 'password', 'New password' %><br/>
