--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing room</h1>
+<% title "Editing Room: #{@room.name}" %>
 
 <% form_for(@room) do |f| %>
   <%= render :partial => 'form', :locals => { :f => f } %>
