--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New room</h1>
+<% title "New Room" %>
 
 <% form_for(@room) do |f| %>
   <%= render :partial => 'form', :locals => { :f => f } %>
