* photos on public/paper_photos * remove old links * minimal changes

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,5 +4,4 @@
 <%= simple_format( @event.description ) %>
 
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Edit', edit_event_path(@event) %>
