--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -27,5 +27,4 @@
 <%= render :partial => 'resources_edit', :locals => { :paper => @paper } %>
   
 
-<%= link_to 'Show', @paper %> |
-<%= link_to 'Back', papers_path %>
+<%= link_to 'Show', @paper %>
