--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -48,8 +48,7 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Show', @user %>
 
 <script>
   function toggle_change_password_fields(){
