fixing event show view

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <% title "Event: #{@event.name}" %>
 
-<h2><%= @event.name %> (<%= @event.price_euros %>€)</h2>
+<h3>Price <%= @event.price_euros %>€</h2>
 <%= simple_format( @event.description ) %>
 
 
