fixing more bugs on populate:rake

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -87,6 +87,6 @@
 
 <div>
   <% if logged_in? && current_user.is_speaker_on_or_admin?( @paper ) %>
-    <%= link_to 'Edit', edit_paper_path(@paper) %> |
+    <%= link_to 'Edit', edit_paper_path(@paper) %>
   <% end %>
 </div>
