--- a/app/views/carts/confirm.html.erb
+++ b/app/views/carts/confirm.html.erb
@@ -1,6 +1,6 @@
 <% title 'Confirm your Purchase' %>
 
-<% form_tag( @cart.paypal_url( complete_cart_url(@cart), notificate_cart_url(@cart) ) ) do %>
+<% form_tag( APP_CONFIG[:paypal_url] ) do %>
   <ul>
   <% @cart.events.each do |event| %>
     <li>        
@@ -14,6 +14,19 @@
   <p>
     <%= @cart.invoice_info %>
   </p>
+  
+  <!-- PAYPAL parameters:INI -->
+  <%= hidden_field_tag :cmd, "_s-xclick" %>
+  <%=
+    hidden_field_tag( 
+      :encrypted,
+      @cart.paypal_encrypted(
+        complete_cart_url( @cart ),
+        notificate_cart_url( @cart, :secret => APP_CONFIG[:paypal_secret] )
+      )
+    )
+  %>
+  <!-- PAYPAL parameters:END -->
   
   <p>
     <%= submit_tag "Pay, throught PayPal", :disabled => false, :disable_with => "Please wait..." %> |
