--- a/app/views/system_mailer/paper.erb
+++ b/app/views/system_mailer/paper.erb
@@ -1,3 +1,3 @@
-The paper <%= @paper.title %> has been submitted to <%= @paper.family %>: <%= paper_url(@paper, :host => APP_CONFIG['site_url']) %>
+The paper <%= @paper.title %> has been submitted to <%= @paper.family %>: <%= paper_url(@paper, :host => APP_CONFIG[:site_url]) %>
 
 <%= @paper.description %>
