--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -22,8 +22,10 @@
   <p><strong>txn id:</strong> <%= cart.transaction_id %></p>
   <p><strong>purchased_at:</strong> <%= cart.purchased_at %></p>
   <p><strong>price:</strong> <%= cart.total_price_on_euros %></p>
-  <p><strong>paypal_errors:</strong> <%= cart.paypal_erros.join(',') %></p>
-
+  <% if !cart.paypal_errors.empty? %>
+    <p><strong>paypal_errors:</strong> <%= cart.paypal_errors.join(',') %></p>
+  <% end %>
+  
   <p>
     <strong>events:</strong>
     <% cart.events.each do |event| %>
