--- a/app/views/stylesheets/screen.sass
+++ b/app/views/stylesheets/screen.sass
@@ -100,3 +100,10 @@ body
   line-height: 1.636364em
   margin-top: 0.75em
   color: #111
+
+h5.break
+  background-color: black
+  color: white
+  padding: 20px
+  a
+    color: white
