--- a/app/views/stylesheets/screen.sass
+++ b/app/views/stylesheets/screen.sass
@@ -101,9 +101,16 @@ body
   margin-top: 0.75em
   color: #111
 
+/* fguillen: add styles just temporally */
 h5.break
   background-color: black
   color: white
   padding: 20px
   a
     color: white
+    
+#carts 
+  p
+    margin: 0px
+  ul
+    margin-bottom: 0px
