--- a/app/views/carts/new.html.erb
+++ b/app/views/carts/new.html.erb
@@ -35,8 +35,8 @@
   
   <p>TOTAL: <span id="total">0</span>€</p>
   
+  <h3><%= label_tag :invoice_info %></h3>
   <p>
-    <%= label_tag :invoice_info %><br />
     <%= text_area_tag :invoice_info, @cart.invoice_info %>
   </p>
   
