--- a/app/views/stylesheets/screen.sass
+++ b/app/views/stylesheets/screen.sass
@@ -101,7 +101,7 @@ body
   margin-top: 0.75em
   color: #111
 
-/* fguillen: add styles just temporally */
+/* fguillen: add styles just temporally
 h5.break
   background-color: black
   color: white
