simple text on paper show

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -3,7 +3,7 @@
 <%= image_tag @paper.photo.url(:medium) %>
 
 <h3>Description</h3>
-<p><%= @paper.description %></p>
+<p><%= simple_format @paper.description %></p>
 
 <h3>Speakers</h3>
 <p>
