--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,20 +12,20 @@
   <p><%= f.label :text, "Text" %><br/>
   <%= f.text_area :text %></p>
   
-  <p><%= f.label :personal_web_name, "Personal Web Name" %><br />
+  <p><%= f.label :personal_web_name, "Personal Web Name" %> <span class="example">(Mi Personal Web)</span><br />
   <%= f.text_field :personal_web_name %></p>
   
-  <p><%= f.label :personal_web_url, "Personal Web Url" %><br />
+  <p><%= f.label :personal_web_url, "Personal Web Url" %> <span class="example">(http://mypersonalweb.com)</span><br />
   <%= f.text_field :personal_web_url %></p>
   
-  <p><%= f.label :company_name, "Company Name" %><br />
+  <p><%= f.label :company_name, "Company Name" %> <span class="example">(My Company)</span><br />
   <%= f.text_field :company_name %></p>
   
-  <p><%= f.label :company_url, "Company Url" %><br />
+  <p><%= f.label :company_url, "Company Url" %> <span class="example">(http://mycompany.com)</span><br />
   <%= f.text_field :company_url %></p>
 
   <p><%= f.check_box :public_profile %>
-  <%= f.label 'public_profile', 'Public Profile' %> (email will not be showed)</p>
+  <%= f.label 'public_profile', 'Public Profile' %> <span class="example">(email will not be showed)</span></p>
   
   <p><%= f.check_box :change_password, :onchange => "toggle_change_password_fields()" %>
   <%= f.label 'change_password', 'Change Password' %></p>
