--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -3,7 +3,7 @@
 <% form_for(@paper) do |f| %>
   <%= f.error_messages %>
 
-  <%= render :partial => 'basic_form', :locals => { :f => f } %>
+  <%= render :partial => 'papers/basic_form', :locals => { :f => f } %>
 
   <p>
     <%= f.submit "Update attributes above" %>
@@ -13,18 +13,23 @@
 <h3>Photo</h3>
 <p>File types allowed: 'image/jpeg', 'image/png'. Max file size: 1MB. Width: between 576px and 1000px.
   Height: between 150px and 300px.</p>
-<%= render :partial => 'photo_edit', :locals => { :paper => @paper } %>
+<%= render :partial => 'papers/photo_edit', :locals => { :paper => @paper } %>
 
 <h3>Speakers</h3>
+<p>Here you can manage the speakers of this talk<./p>
 <div id="speakers">
-  <%= render :partial => 'speakers_edit', :locals => { :paper => @paper } %>
+  <%= render :partial => 'papers/speakers_edit', :locals => { :paper => @paper } %>
 </div>
 
 <h3>Status</h3>
-<%= render :partial => 'status_edit', :locals => { :paper => @paper } %>
+<p>This is the actual status of the talk.</p>
+<%= render :partial => 'papers/status_edit', :locals => { :paper => @paper } %>
 
 <h3>Resources</h3>
-<%= render :partial => 'resources_edit', :locals => { :paper => @paper } %>
+<p>Here you can manage the resources associated to this talk, like PDF, presentations, online videos, etc.</p>
+<p>You can choose between upload a file from your computer or indicate an URL for the resource.
+  Also you can indicate a name for the resource or leave just the URL.</p>
+<%= render :partial => 'papers/resources_edit', :locals => { :paper => @paper } %>
   
 
 <%= link_to 'Show', @paper %>
