--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,7 @@
   <%= f.password_field :password_confirmation %></p>
   
   <p><%= f.check_box :public_profile %>
-  <%= label_tag 'public_profile', 'Public Profile' %> (email will not be showed)</p>
+  <%= label_tag 'public_profile', 'Public Profile' %> (email will not be shown)</p>
   
   <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
