--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,7 +25,7 @@
   <%= f.text_field :company_url %></p>
 
   <p><%= f.check_box :public_profile %>
-  <%= f.label 'public_profile', 'Public Profile' %> <span class="example">(email will not be showed)</span></p>
+  <%= f.label 'public_profile', 'Public Profile' %> <span class="example">(email will not be shown)</span></p>
   
   <p><%= f.check_box :change_password, :onchange => "toggle_change_password_fields()" %>
   <%= f.label 'change_password', 'Change Password' %></p>
