more infor on paper creation

--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -21,6 +21,8 @@
 
 <h3>Speakers</h3>
 <p>Here you can manage the speakers of this talk.</p>
+
+<p>Here only appear the users with public profile already registered on the app.</p>
   
 <div id="speakers">
   <%= render :partial => 'papers/speakers_edit', :locals => { :paper => @paper } %>
