--- a/app/views/papers/new.html.erb
+++ b/app/views/papers/new.html.erb
@@ -4,7 +4,15 @@
   <%= f.error_messages %>
   
   <%= render :partial => 'basic_form', :locals => { :f => f } %>
-  
+
+  <p>
+    Once the Talk is created you will can, if you want, and whenever you want:
+    <ul>
+      <li>Add a cool picture to the talk.</li>
+      <li>Attach files or online resources.</li>
+      <li>Add other speakers to the talk if you have company (all the speakers should be registered on the app).</li>
+    </ul>
+  </p>
   <p>
     <%= f.submit "Create" %>
   </p>
