name of paypal buttom

--- a/app/views/carts/confirm.html.erb
+++ b/app/views/carts/confirm.html.erb
@@ -30,7 +30,7 @@
   <!-- PAYPAL parameters:END -->
   
   <p>
-    <%= submit_tag "Pay, throught PayPal", :disabled => false, :disable_with => "Please wait..." %> |
+    <%= submit_tag "Pay with Paypal", :disabled => false, :disable_with => "Please wait..." %> |
     <%= link_to 'Modify cart', new_cart_path %>
   </p>
 <% end %>
