--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,28 +1,34 @@
 <div class="spot">
-<img src="http://spurrd.com/assets/141/prize.gif"/>
-<h3>Best of Show</h3>
-<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia <a href="/about">consequuntur</a> magni dolor eos qui ration volupt sequi nesciunt. Proin varius urna. In varius bibendum nisl. Donec nec nisi ut nisi varius porttitor.</p>
+  <%= image_tag "ruby.png" %>
+  <h3>What's Ruby?</h3>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+    nisi ut aliquip ex ea commodo consequat.
+  </p>
 </div>
 
 <div class="spot">
-<img src="http://spurrd.com/assets/129/green.gif"/>
-<h3>Happy Planet</h3>
-<p>Mauris elit lacus, iaculis a, cons nec, vehicula <a href="/about">condimentum</a> at. Suspendisse sapien enim, tempus ut, facilisis at, vestibulum nec, nunc. Aliquam erat volutpat. Ut sit amet quam. Cum soci natoque penati et magnis dis partur montes, nascet ridiculus mus. Aen vel urna. In justo nisl, cursus in, molestie a, vulputate nec. </p> 
+  <%= image_tag "prize.png" %>
+  <h3>Happy Planet</h3>
+  <p>Mauris elit lacus, iaculis a, cons nec, vehicula <a href="/about">condimentum</a> at. Suspendisse sapien enim, tempus ut, facilisis at, vestibulum nec, nunc. Aliquam erat volutpat. Ut sit amet quam. Cum soci natoque penati et magnis dis partur montes, nascet ridiculus mus. Aen vel urna. In justo nisl, cursus in, molestie a, vulputate nec. </p> 
 </div>
 
 <div class="spot">
-<img src="http://spurrd.com/assets/144/recycle.gif"/>
-<h3>Round and round</h3>
-<p>Donec tempor mollis ante. Nunc felis. Proin ac pede vel nulla lacinia congue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi cursus, dui quis pretium blandit, erat massa lacinia neque, eu porttitor lacus erat ac leo.</p>
+  <%= image_tag "green.png" %>
+  <h3>Round and round</h3>
+  <p>Donec tempor mollis ante. Nunc felis. Proin ac pede vel nulla lacinia congue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi cursus, dui quis pretium blandit, erat massa lacinia neque, eu porttitor lacus erat ac leo.</p>
 </div>
 
 <div class="box">
-<h3>Our Newsletter</h3>
-<input type="text" name="" id="" onfocus="this.value=''" value="Enter your email address..." class="email"/>
-<input type="submit" value="Subscribe" class="subscribe"/>
+  <h3>Our Newsletter</h3>
+  <input type="text" name="" id="" onfocus="this.value=''" value="Enter your email address..." class="email"/>
+  <input type="submit" value="Subscribe" class="subscribe"/>
 </div>
 
-<div class="spot"><img src="http://spurrd.com/assets/147/rss.gif"/>
-<h3>RSS</h3>
-<p>Get the <a href="/rss/">feed</a> for our latest news. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
+<div class="spot">
+  <%= image_tag "rss.png" %>
+  <h3>RSS</h3>
+  <p>Get the <a href="/rss/">feed</a> for our latest news. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
 </div>
