replace menu_to to handle current

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -10,14 +10,13 @@
 </div>
 
 <div class="spot">
-  <%= image_tag "prize.png" %>
-  <h3>Happy Planet</h3>
+  <%= image_tag "twitter.png" %>
+  <h3>Follow us on Twitter</h3>
   <p>Mauris elit lacus, iaculis a, cons nec, vehicula <a href="/about">condimentum</a> at. Suspendisse sapien enim, tempus ut, facilisis at, vestibulum nec, nunc. Aliquam erat volutpat. Ut sit amet quam. Cum soci natoque penati et magnis dis partur montes, nascet ridiculus mus. Aen vel urna. In justo nisl, cursus in, molestie a, vulputate nec. </p> 
 </div>
 
 <div class="spot">
-  <%= image_tag "green.png" %>
-  <h3>Round and round</h3>
+  <h3>Sponsorship</h3>
   <p>Donec tempor mollis ante. Nunc felis. Proin ac pede vel nulla lacinia congue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi cursus, dui quis pretium blandit, erat massa lacinia neque, eu porttitor lacus erat ac leo.</p>
 </div>
 
