--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,13 @@
   </head>
 
   <body>
-    <div id="page">
+    <div id="header">
       <div id="nav">
         <%= render :partial => 'layouts/menu' %>
       </div>
+    </div>
+
+    <div id="page">
 
       <div id="header">
       </div>
