--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,33 +1,29 @@
 <div id="main-menu">
   <ul>
-    <li><%= menu_to 'Calendar', calendar_path %></li>
-    <li>
-      <%= menu_to 'Talks', papers_path %>
-      <% if logged_in? %>
-        <%= link_to_unless_current '(Submit yours)', new_paper_path %>
-      <% end %>
-    </li>
-    <li><%= menu_to 'People', users_path( :page => 1 ) %></li>
-    <li><%= menu_to 'Blog', 'http://euruko2009.org' %></li>
-    <li><%= menu_to 'Help', root_path %></li>
+    <%= menu_to 'Calendar', calendar_path %>
+    <%= menu_to 'Talks', papers_path %>
+    <% if logged_in? %>
+      <%= link_to_unless_current '(Submit yours)', new_paper_path %>
+    <% end %>
+    <%= menu_to 'People', users_path(:page => 1) %>
+    <%= menu_to 'Blog', 'http://euruko2009.org' %>
+    <%= menu_to 'Help', root_path %>
   </ul>
 </div>
 
 <div id="user-menu">
   <ul>
   <% if logged_in? %>
-    <li><%= menu_to 'Profile', user_path(current_user) %></li>
-    
+    <%= menu_to 'Profile', user_path(current_user) %>
     <% if current_user.everything_paid? %>
-      <li><%= menu_to 'Pay!', new_cart_path %></li>
+      <%= menu_to 'Pay!', new_cart_path %>
     <% else %>
-      <li><%= menu_to 'Pay!', new_cart_path, :class => "highlight" %></li>
+      <%= menu_to 'Pay!', new_cart_path, :highlight => true %>
     <% end %>
-    
-    <li><%= menu_to 'Logout', logout_path %></li>
+    <%= menu_to 'Logout', logout_path %>
   <% else %>
-    <li><%= menu_to 'Register!', new_user_path, :class => "highlight" %></li>
-    <li><%= menu_to 'Login', new_session_path %></li>
+    <%= menu_to 'Login', new_session_path %>
+    <%= menu_to 'Register', new_user_path, :class => "highlight" %>
   <% end %>
   </ul>
 </div>
